@@ -1,4 +1,7 @@
 * Wed May 16 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
+- Replaced OBE simp::yum::enable_auto_updates entries with
+  simp::yum::schedule::enable in all profiles
+- Added and updated simp::yum::schedules entries for DISA STIG
 - Added simp::sysctl entries to the DISA STIG profiles for
   net.ipv4.conf.default.accept_source_route,
   net.ipv4.conf.default.send_redirects, and
@@ -6,7 +9,7 @@
 
 * Fri May 04 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.3.4-0
 - Added and updated ssh::server::conf entries for DISA STIG
- 
+
 * Mon Apr 30 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
 - Added 'svckill::mode' to be 'enforcing' in STIG and 800-53 modes
 
